--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "screenshot-basic",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@citizenfx/client": "^1.0.1012-1",
-    "@citizenfx/http-wrapper": "^0.2.0",
-    "@citizenfx/server": "^1.0.1012-1",
-    "@citizenfx/three": "^0.100.0",
-    "@types/koa": "^2.0.48",
-    "@types/koa-router": "^7.0.37",
-    "@types/mv": "^2.1.0",
-    "@types/uuid": "^3.4.4",
-    "html-webpack-inline-source-plugin": "^0.0.10",
-    "html-webpack-plugin": "^3.2.0",
-    "koa": "^2.6.2",
-    "koa-body": "^4.0.6",
-    "koa-router": "^7.4.0",
-    "mv": "^2.1.1",
-    "ts-loader": "^5.3.3",
-    "typescript": "3.2.2",
-    "uuid": "^3.3.2",
-    "webpack": "4.28.4"
-  }
+    "name": "screenshot-basic",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "@citizenfx/client": "^1.0.1012-1",
+        "@citizenfx/http-wrapper": "^0.2.0",
+        "@citizenfx/server": "^1.0.1012-1",
+        "@citizenfx/three": "^0.100.0",
+        "@types/koa": "^2.0.48",
+        "@types/koa-router": "^7.0.37",
+        "@types/mv": "^2.1.0",
+        "@types/uuid": "^3.4.4",
+        "axios": "0.19.2",
+        "follow-redirects": "1.12.1",
+        "form-data": "3.0.0",
+        "html-webpack-inline-source-plugin": "^0.0.10",
+        "html-webpack-plugin": "^3.2.0",
+        "jquery": "3.5.1",
+        "koa": "^2.6.2",
+        "koa-body": "^4.0.6",
+        "koa-router": "^7.4.0",
+        "mv": "^2.1.1",
+        "navigator": "1.0.1",
+        "request": "2.88.2",
+        "ts-loader": "^5.4.5",
+        "typescript": "3.2.2",
+        "unirest": "0.6.0",
+        "uuid": "^3.3.2",
+        "web-midi-api": "2.0.8",
+        "webpack": "4.28.4"
+    }
 }
